--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ torch>=2.0.0
 torchaudio>=2.0.0
 torchdiffeq
 tqdm>=4.65.0
-transformers
+transformers==4.41.0
 transformers_stream_generator
 vocos
 wandb
